# observability-kit

./: .gitignore  .gitleaks.toml  .markdownlint.json  .yamllint  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  requirements-ci.txt
.claude/commands/: run-batch.md
.github/workflows/: ci.yaml  ci.yml  e2e-nightly.yaml  release.yaml
adapters/billing/: BILLING_ADAPTER_COMPATIBILITY_V1.yaml  README.md  ROLLBACK_UNINSTALL_NOTES.md  STRIPE_REFERENCE_ADAPTER_STUB_V1.yaml  STUB_METADATA.json
adapters/cicd/: CICD_ADAPTER_TEMPLATE_COMPATIBILITY_V1.yaml  README.md  ROLLBACK_UNINSTALL_NOTES.md  STUB_METADATA.json
adapters/identity/: IDENTITY_BACKEND_ADAPTER_COMPATIBILITY_V1.yaml  README.md  ROLLBACK_UNINSTALL_NOTES.md  STUB_METADATA.json
adapters/network/: NETWORK_INGRESS_ADAPTER_COMPATIBILITY_V1.yaml  README.md  ROLLBACK_UNINSTALL_NOTES.md  STUB_METADATA.json
adapters/providers/: EVENT_SOURCE_ADAPTER_COMPATIBILITY_V1.yaml  README.md  ROLLBACK_UNINSTALL_NOTES.md  STUB_METADATA.json
adapters/secrets/: README.md  ROLLBACK_UNINSTALL_NOTES.md  SECRETS_BACKEND_ADAPTER_COMPATIBILITY_V1.yaml  STUB_METADATA.json
adapters/storage/: README.md  ROLLBACK_UNINSTALL_NOTES.md  STORAGE_BACKEND_ADAPTER_COMPATIBILITY_V1.yaml  STUB_METADATA.json
agents/catalog/: AGENT_CATALOG_V1.yaml
agents/policies/: TOOL_BINDINGS_V1.yaml  edge-policy.rego
contracts/: CONTRACTS_NAMING_CONVENTION.md
contracts/adapters/: ADAPTER_CI_CONTRACT_GATING_VALIDATION.json  ADAPTER_CONTRACT_SCHEMA_COVERAGE.json  CICD_ADAPTER_NEUTRALITY_VALIDATION.json  IDENTITY_SECRETS_NETWORK_STUB_METADATA_VALIDATION.json  PROFILE_ACTIVATION_SAFETY_VALIDATION.json
contracts/ai/: AGENT_ENVELOPE_V1.json  BOUNDARY_CONTRACT_V1.yaml  CASEFILE_FIXTURES_V1.json  CASEFILE_LIFECYCLE_V1.md  CASEFILE_SCHEMA_V1.json  COMMUNICATION_GRAPH_V1.yaml  CONTRADICTION_ROLLUP_RULES_V1.yaml  KAGENT_PERSISTENCE_CONTRACT_V1.yaml  MODEL_PROVIDER_ADAPTER_CONTRACT_V1.yaml  NAMESPACE_BOUNDARY_RULES_V1.yaml  PROTOCOL_EDGES_V1.yaml  REPLACEABILITY_MATRIX_V1.md  REPLAY_RESUME_RULES_V1.yaml
contracts/collector/: AGENT_DAEMONSET_PROFILE.json  FAILURE_SIMULATION_EVIDENCE.json  GATEWAY_DEPLOYMENT_PROFILE.json  OTLP_EXPORT_ATTACH_TEST.json  OTLP_EXPORT_STANDALONE_TEST.json  SELF_OBSERVABILITY_BASELINE.json
contracts/commercial/: INVOICE_EXPORT_CONTRACT_V1.yaml  INVOICE_EXPORT_SCHEMA_V1.json  METERING_CONTRACT_V1.yaml  PLAN_CATALOG_V1.yaml  README.md  USAGE_RECORD_SCHEMA_V1.json
contracts/compatibility/: COMPATIBILITY_MATRIX.json  GRADING_RULES.json  MODE_DECISION_TABLE.json  PROFILE_CATALOG.json  REMEDIATION_CATALOG.json
contracts/demo/: DEMO_SCENARIO_SCHEMA_V1.json
contracts/discovery/: DISCOVERY_PROBES_SAMPLE.json  DISCOVERY_PROBES_SCHEMA.json  EXECUTOR_ARCHITECTURE_CONTRACT_V1.yaml  GENERATED_CAPABILITY_MATRIX.json  GENERATED_COMPATIBILITY_RESULT.json  PREFLIGHT_REPORT_SAMPLE.json  PREFLIGHT_REPORT_SCHEMA.json  READINESS_REPORT_SCAFFOLD.json
contracts/docs/: DOCS_COVERAGE_MATRIX_V1.yaml
contracts/evidence/: DISPOSABLE_CLUSTER_HARNESS_CONTRACT_V1.yaml
contracts/graph/: GRAPH_DEPENDENCY_QUERIES_VALIDATION.json  GRAPH_FRESHNESS_ALERTS_VALIDATION.json  GRAPH_IDEMPOTENT_SYNC_VALIDATION.json  GRAPH_MODULE_PROFILE_VALIDATION.json  GRAPH_RUNBOOK_DRY_RUN_VALIDATION.json  GRAPH_SCHEMA_VERSIONING_VALIDATION.json
contracts/install/: ADMIN_GUI_READINESS.schema.json  INSTALL_CONTRACT.example.yaml  INSTALL_CONTRACT.schema.json  INSTALL_CONTRACT_SCHEMA.json  INSTALL_FLOW_CONTRACT_V1.yaml  POST_INSTALL_READINESS.schema.json
contracts/logs/: CRI_JSON_PARSING_VALIDATION.json  LOGS_INDEX_TEMPLATE_POLICY.json  LOG_PARSING_CONTRACT.json  MULTILINE_GROUPING_VALIDATION.json  NEVER_INDEX_RULES.json  SENSITIVE_FIELD_REDACTION_VALIDATION.json  TRACE_CORRELATION_VALIDATION.json
contracts/management/: PORTAL_CONTRACT_V1.yaml  PROPAGATION_RECONCILIATION_CONTRACT_V1.yaml  README.md  RENDERER_ARCHITECTURE_CONTRACT_V1.yaml  SINGLE_PANE_ACCESS_CONTRACT_V1.yaml  UNIFIED_CONFIG_SCHEMA_V1.json  WRAPPED_SYSTEM_REGISTRY_V1.yaml
contracts/mcp/: GATEWAY_DISCOVERY_CONTRACT_V1.yaml  MCP_CATALOG_V1.yaml  SEMVER_COMPATIBILITY_POLICY_V1.yaml  TENANCY_REDACTION_RULES_V1.yaml  TOOL_RESPONSE_SCHEMA_V1.json
contracts/metrics/: METRICS_SUBSCRIPTION_CONTRACT.json
contracts/metrics_traces/: CARDINALITY_GUARDRAILS_VALIDATION.json  CORRELATION_PIVOT_VALIDATION.json  METRICS_COLLECTION_BASELINE_VALIDATION.json  (+3 more)
demo/: README.md  SCENARIOS.md  deploy.sh  teardown.sh
demo/services/: Dockerfile  SIGNAL_INVENTORY.md  pyproject.toml
demo/services/demosvc/: __init__.py  __main__.py  datastore.py  http_api.py  loadgen.py  otel.py  scheduled_job.py  worker.py
docs/: DECISIONS.md  README.md
gitops/: README.md
services/ai/: Dockerfile  pyproject.toml
services/ai/airuntime/: __init__.py  __main__.py  contracts.py  gateway.py  httpd.py  kagent.py  khook.py  mcpserver.py  modelprovider.py  policy.py  store.py
services/commercial/: pyproject.toml
services/commercial/commercialsvc/: __init__.py  builder.py  invoicing.py  metering.py  models.py  sinks.py  sources.py  validation.py
services/portal/: pyproject.toml
services/portal/portalsvc/: __init__.py  api.py  catalog.py  configflow.py  frontend.py  health.py  models.py  security.py  tenants.py
services/portal/portalsvc/static/: portal.css
services/portal/portalsvc/templates/: config.html  health.html  layout.html  navigation.html  tenants.html
services/tenancy/: README.md  pyproject.toml
services/tenancy/tenantctl/: __init__.py  api.py  approval.py  audit.py  isolation.py  models.py  renders.py  service.py  state_machine.py  store.py
tools/obskit/: pyproject.toml  requirements.txt
tools/obskit/obskit/: __init__.py  __main__.py  cli.py  discovery.py  emit.py  evaluate.py  models.py  preflight.py  reader.py
tools/obskit/obskit/configrender/: __init__.py  document.py  drift.py  facts.py  models.py  patch.py  render.py  rollback.py
tools/obskit/obskit/install/: __init__.py  contract.py  finalize.py  flow.py  models.py  render.py  wizard.py
tools/obskit/rbac/: obskit-readonly-rbac.yaml
(+608 files in other folders)
