# Dependency manifest for the tenant control plane service (Batch 20,
# TR-21, ADR-0004). This package owns its dependencies; nothing here is
# ever added to requirements-ci.txt, which stays lint-only - the same
# posture ADR-0001 fixed for tools/obskit.
#
# The core layer (state machine, replay, approval gating, audit, render
# planning) is standard-library-only plus the repo's own obskit package
# (tools/obskit), consumed as a library. obskit is a logical dependency
# without a pip requirement: inside the monorepo, tenantctl.renders
# falls back to adding tools/obskit to sys.path relative to the source
# tree (the same pattern the offline tests use), so no path dependency
# or index publication is needed. FastAPI is an optional extra used
# exclusively by the thin API adapter (tenantctl.api), which stays
# importable without it.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "obskit-tenantctl"
version = "0.1.0"
description = "Observability Kit tenant control plane service"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.30"]

[tool.setuptools.packages.find]
include = ["tenantctl*"]

[tool.setuptools.package-data]
tenantctl = ["py.typed"]
